--- a/manifest.json
+++ b/manifest.json
@@ -7,6 +7,9 @@
       "local_path": "index.html"
     }
   },
+  "icons": {
+    "128": "icon128.png"
+  },
   "offline_enabled": true,
   "content_security_policy": "script-src 'self'; object-src 'self'"
 }
